# Parallel-Programming-with-MPI

circuit-satisfiability/: CMakeLists.txt  main.c
floyd/: CMakeLists.txt  main.c  mympi.c  mympi.h  write_row.c
the-sieve-of-eratosthenes/: CMakeLists.txt  main.c
